education/educationapp/force-app/main/default/objects/edu_aluno__c/edu_aluno__c.object-meta.xml
<CustomObject>
    <label>Aluno</label>
    <nameField>
        <label>Nome do Aluno</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alunos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>