education/educationapp/force-app/main/default/objects/edu_aluno__c/fields/edu_email__c.field-meta.xml
<CustomField>
    <fullName>edu_email__c</fullName>
    <inlineHelpText>E-mail de contato do aluno.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>