education/educationapp/force-app/main/default/objects/edu_aluno__c/fields/edu_endereco__c.field-meta.xml
<CustomField>
    <fullName>edu_endereco__c</fullName>
    <inlineHelpText>Endereço do aluno contendo todas as informações na seguinte ordem e separados por virgula: Rua, Numero, Bairro, Cidade, Estado e CEP.</inlineHelpText>
    <label>Endereço</label>
    <length>255</length>
    <type>Text</type>
</CustomField>