education/educationapp/force-app/main/default/objects/edu_aluno__c/fields/edu_instmatalu__c.field-meta.xml
<CustomField>
    <fullName>edu_instmatalu__c</fullName>
    <label>Matriculada Principal</label>
    <referenceTo>edu_instituicaodeensino__c</referenceTo>
    <relationshipLabel>Matriculas</relationshipLabel>
    <relationshipName>edu_instmatalu</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>