education/educationapp/force-app/main/default/objects/edu_aluno__c/fields/edu_telefone__c.field-meta.xml
<CustomField>
    <fullName>edu_telefone__c</fullName>
    <inlineHelpText>Número de telefone, celular ou contato do aluno, com DDD e somente números.</inlineHelpText>
    <label>Telefone</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>